--- a/views/home.html
+++ b/views/home.html
@@ -65,7 +65,7 @@
                         <a href="/info">¿QUIENES SOMOS?</a>
                     </li>
                     <li>
-                        <a href="blog.html">BLOG</a>
+                        <a href="/blog">BLOG</a>
                     </li>
                 </ul>
             </nav>
