--- a/views/opcion-productos.html
+++ b/views/opcion-productos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css ">
-    <link rel="stylesheet" href="/css/styles-blog.css ">
+    <link rel="stylesheet" href="/css/opcion-productos.css ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -76,34 +76,33 @@
         <section class="titulo">
             <h2 class="title-line">BLOG</h2>
         </section>
-        <section class="tip-malewo">
-            <img class="banner-blog" src="img/foto-de-una-planta.jpg" alt="banner-blog">
-            <h3>TIPS MALEWO</h3>
+        <section class="main-title">
+            <h3 class="create-account">BLOG</h3>
             <div class="style-bar1"></div>
         </section>
         <section class="contenedor-blog">
             <div class="articulos-blog">
                 <img src="img/img-home/Screenshot_16.png" alt="preguntas frecuentes">
 
-                <h3 class="texto">Preguntas Frecuentes</h3>
-                <p class="texto">Todo los que tenés que saber acerca de nuestros productos</p>
-                <a href="">Leer mas</a>
+                <h3 class="texto">ACCESIORIOS</h3>
+
+                <a href="">VER TODAS LAS OPCIONES</a>
 
             </div>
             <div class="articulos-blog">
                 <img src="img/img-home/Screenshot_13.png" alt="cuida-plantas">
 
-                <h3 class="texto">Cuida tus plantas</h3>
-                <p class="texto">¿Queres saber como cuidar tus plantas?</p>
-                <a href="">Leer mas</a>
+                <h3 class="texto">MACETAS DE INTERIOR</h3>
+
+                <a href="">VER TODAS LAS OPCIONES</a>
 
             </div>
             <div class="articulos-blog">
                 <img src="img/img-home/Screenshot_14.png" alt="decora-espacios">
 
-                <h3 class="texto">Decora tus espacio</h3>
-                <p class="texto">Conoce las nuevas tendencias y como decorar tus espacios</p>
-                <a href="">Leer mas</a>
+                <h3 class="texto">MACETAS DE EXTERIOR</h3>
+
+                <a href="">VER TODAS LAS OPCIONES</a>
 
             </div>
         </section>
