agregue nav bar al header

--- a/views/blog.html
+++ b/views/blog.html
@@ -23,6 +23,11 @@
     <header>
 
         <div class="top-header">
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
             <div class="header-social-icons">
                 <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
@@ -38,9 +43,7 @@
                     <i class="fas fa-shopping-bag"></i>
                 </a>
             </div>
-            <div class="burger">
-                <i class="fas fa-bars"></i>
-            </div>
+           
         </div>
         <div class="inicio-sesion">
             <ul class="login-ul">
@@ -54,7 +57,7 @@
             </ul>
         </div>
         <div class="barra">
-            <nav>
+            
                 <ul class="nav-ul">
                     <li>
                         <a href="/" class="a-inicio">INICIO</a>
@@ -69,7 +72,7 @@
                         <a href="/blog">BLOG</a>
                     </li>
                 </ul>
-            </nav>
+           
         </div>
     </header>
     <main>
@@ -143,7 +146,10 @@
             <p>todos los derechos reservados MALEWO® 2021</p>
         </section>
     </footer>
+    
+    <script src="../js/prueba.js"></script>
 </body>
+
 
 </html>
 
