--- a/views/product-detail.html
+++ b/views/product-detail.html
@@ -16,31 +16,34 @@
 </head>
 <body>
     <header>
-        <div class="header-social-icons">
-            <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
-        </div>
+
         <div class="top-header">
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <div class="header-social-icons">
+                <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
+            </div>
             <a class="logo-img" href="/" style="text-decoration: none;">
                 <img src="img\logo.jpg" alt="logo">
-                </a>
+            </a>
             <a href="/" style="text-decoration: none;">
                 <h1>CASA MALEWO</h1>
             </a>
             <div class="carrito">
-            
                 <a href="/compras">
                     <i class="fas fa-shopping-bag"></i>
                 </a>
             </div>
-            <div class="burger">
-                <i class="fas fa-bars"></i>
-            </div>
+           
         </div>
         <div class="inicio-sesion">
             <ul class="login-ul">
-                <li> 
-                    <i class="far fa-user-circle header-icon"></i> 
+                <li>
+                    <i class="far fa-user-circle header-icon"></i>
                     <a href="/login"> INICIAR SESIÓN</a>
                 </li>
                 <li>
@@ -49,13 +52,13 @@
             </ul>
         </div>
         <div class="barra">
-            <nav>
+            
                 <ul class="nav-ul">
                     <li>
                         <a href="/" class="a-inicio">INICIO</a>
                     </li>
                     <li>
-                        <a href="/products">PRODUCTOS</a> 
+                        <a href="/products">PRODUCTOS</a>
                     </li>
                     <li>
                         <a href="/info">¿QUIENES SOMOS?</a>
@@ -64,7 +67,7 @@
                         <a href="/blog">BLOG</a>
                     </li>
                 </ul>
-            </nav>
+           
         </div>
     </header>
     <main>
@@ -145,5 +148,7 @@
             <p>todos los derechos reservados MALEWO® 2021</p>
         </section>
     </footer>
+    
+    <script src="../js/prueba.js"></script>
 </body>
 </html>
