--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -91,15 +91,15 @@ header div.top-header .carrito i{
 }
 
 header div.top-header div.burger{
-    order: -1;
-    padding: 5px 10px;
+    cursor: pointer;
     align-self: flex-end;
 }
 
-header div.top-header div.burger i{
-    color: white;
-    font-size: 1rem;
-    
+header div.top-header div.burger div{
+    width: 20px;
+    height: 3px;
+    margin:5px;
+    background-color: white;
 }
 
 .inicio-sesion ul li a {
@@ -125,20 +125,34 @@ header div.top-header div.burger i{
     margin-top: 2px;
 }
 
-nav{
-    display: none;
-    justify-content: center;
-    position: relative;
-    top: 14px;
+.nav-ul.activo{
+    transform: translateX(0%);
 }
-
 header ul{
     display: flex;
     flex-wrap: wrap;
 
 }
+.nav-ul{
+    position: absolute;
+    left: 0;
+    padding-left: 20px;
+    height: 92vh;
+    background-color: black;
+    opacity: 0.7;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 17px;
+    width: 231px;
+    margin-left: -25px;
+    padding: 14px;
+}
+body{
+    overflow-x: hidden;
+}
 
-div.barra nav ul li a{
+div.barra ul li a{
     font-size: 1rem;
     margin-left: 30px;
     margin-top: 0px;
@@ -146,16 +160,8 @@ div.barra nav ul li a{
     color: #FFFFFF;
     text-decoration: none;
 }
-div.barra nav ul li a:hover{
+div.barra ul li a:hover{
     text-decoration: underline;
-}
-
-.a-inicio {
-    margin-left: 0px !important;
-}
-
-.nav-ul {
-    padding-left: 0px;
 }
 
 header li {
@@ -166,10 +172,7 @@ header li {
     margin-left: 5px;
 }
 
-.barra-links{
-    align-self: center;
-    justify-content: center;
-}
+
 
 .inicio-sesion{
     display: none;
@@ -369,12 +372,49 @@ footer section p {
 }
 
 
+@media (max-width:542px){
+    .nav-ul{
+        transform: translateX(-100%);
+        transition: transform .5s ease-in;
+    }
+    .nav-ul li{
+        opacity: 0;
+    }  
+    .nav-ul li:nth-child(1) {
+        transition: all 0.5s ease 0.2s;
+    }
+    .nav-ul li:nth-child(2) {
+        transition: all 0.5s ease 0.2s;
+    }
+    .nav-ul li:nth-child(3) {
+        transition: all 0.5s ease 0.2s;
+    }
+    .nav-ul li:nth-child(4) {
+        transition: all 1.5s ease 0.2s;
+    }
+    li.fade {
+        opacity: 1;
+    }
+
+}
 @media(min-width: 542px){
     .logo-img{
         display:block
     }
-    nav{
+    .nav-ul{
         display: flex;
+        position: relative;
+        justify-content: center;
+        top: 14px;
+        padding-left: 0px;
+        left: auto;
+        height: auto;
+        background-color:transparent;
+        flex-direction: row;
+        margin-top:auto;
+        width: auto;
+        margin-left: auto;
+        padding: 0;
 
     }
     .header-social-icons{
