--- a/views/home.html
+++ b/views/home.html
@@ -22,6 +22,11 @@
     <header>
 
         <div class="top-header">
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
             <div class="header-social-icons">
                 <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
@@ -37,9 +42,7 @@
                     <i class="fas fa-shopping-bag"></i>
                 </a>
             </div>
-            <div class="burger">
-                <i class="fas fa-bars"></i>
-            </div>
+           
         </div>
         <div class="inicio-sesion">
             <ul class="login-ul">
@@ -53,7 +56,7 @@
             </ul>
         </div>
         <div class="barra">
-            <nav>
+            
                 <ul class="nav-ul">
                     <li>
                         <a href="/" class="a-inicio">INICIO</a>
@@ -68,7 +71,7 @@
                         <a href="/blog">BLOG</a>
                     </li>
                 </ul>
-            </nav>
+           
         </div>
     </header>
     <section class="slider">
@@ -157,6 +160,8 @@
             <p>todos los derechos reservados MALEWO® 2021</p>
         </section>
     </footer>
+    <script src="../js/prueba.js"></script>
+
 </body>
 
 </html>
