--- a/views/products.html
+++ b/views/products.html
@@ -21,13 +21,18 @@
     <header>
 
         <div class="top-header">
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
             <div class="header-social-icons">
                 <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
-            </div> 
+            </div>
             <a class="logo-img" href="/" style="text-decoration: none;">
                 <img src="img\logo.jpg" alt="logo">
-                </a>
+            </a>
             <a href="/" style="text-decoration: none;">
                 <h1>CASA MALEWO</h1>
             </a>
@@ -36,9 +41,7 @@
                     <i class="fas fa-shopping-bag"></i>
                 </a>
             </div>
-            <div class="burger">
-                <i class="fas fa-bars"></i>
-            </div>
+           
         </div>
         <div class="inicio-sesion">
             <ul class="login-ul">
@@ -52,7 +55,7 @@
             </ul>
         </div>
         <div class="barra">
-            <nav>
+            
                 <ul class="nav-ul">
                     <li>
                         <a href="/" class="a-inicio">INICIO</a>
@@ -67,7 +70,7 @@
                         <a href="/blog">BLOG</a>
                     </li>
                 </ul>
-            </nav>
+           
         </div>
     </header>
     <main>
@@ -189,5 +192,7 @@
             <p>todos los derechos reservados MALEWO® 2021</p>
         </section>
     </footer>
+    
+    <script src="../js/prueba.js"></script>
 
 </body>
