--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -480,7 +480,7 @@ footer section p {
         left: 13px;
     }
     .titulo{
-        padding: 0 15% 5%;
+        padding: 5% 15% 5%;
     }
     .productos-disponibles {
         padding: 5% 14%;
