--- a/views/quienes-somos.ejs
+++ b/views/quienes-somos.ejs
@@ -1,79 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles-quienes-somos.css">
-    <link rel="stylesheet" href="/css/styles.css ">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"  rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-
-    <title>MALEWO || Home</title>
-</head>
-
-<body>
-    <header>
-
-        <div class="top-header">
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-            <div class="header-social-icons">
-                <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
-            </div>
-            <a class="logo-img" href="/" style="text-decoration: none;">
-                <img src="img\logo.jpg" alt="logo">
-            </a>
-            <a href="/" style="text-decoration: none;">
-                <h1>CASA MALEWO</h1>
-            </a>
-            <div class="carrito">
-                <a href="/compras">
-                    <i class="fas fa-shopping-bag"></i>
-                </a>
-            </div>
-           
-        </div>
-        <div class="inicio-sesion">
-            <ul class="login-ul">
-                <li>
-                    <i class="far fa-user-circle header-icon"></i>
-                    <a href="/login"> INICIAR SESIÓN</a>
-                </li>
-                <li>
-                    <a href="/compras"><i class="fas fa-shopping-bag header-icon"></i></a>
-                </li>>
-            </ul>
-        </div>
-        <div class="barra">
-            
-                <ul class="nav-ul">
-                    <li>
-                        <a href="/" class="a-inicio">INICIO</a>
-                    </li>
-                    <li>
-                        <a href="/products">PRODUCTOS</a>
-                    </li>
-                    <li>
-                        <a href="/info">¿QUIENES SOMOS?</a>
-                    </li>
-                    <li>
-                        <a href="/blog">BLOG</a>
-                    </li>
-                </ul>
-           
-        </div>
-    </header>
+<%- include('./partials/head', { title:'¿ Quienes Somos ? ', hojaCss:'styles-quienes-somos'}) %>
+<%- include('./partials/header') %>
     <main>
         <h1>¿Quienes Somos?</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia autem, quisquam aspernatur at nostrum omnis cumque numquam 
@@ -86,40 +12,7 @@
 
         <img src="/img/logo.png" alt="logo">
     </main>
-    
-    <footer>
-        <section>
-            <div class="style-bar2"></div>
-        </section>
-        <section class="footer-icons">
-            <div>
-                <a href="https://www.instagram.com" class="icon-link-footer"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com" class="icon-link-footer"><i class="fab fa-facebook-square"></i></a>
-            </div>
-        </section>
-        <section class="footer-info">
-            <div class="casa-malewo">
-                <h4>CASA MALEWO</h4>
-                <ul class="footer-list">
-                    <li>productos</li>
-                    <li>nosotros</li>
-                    <li>blog</li>
-                </ul>
-            </div>
-            <div class="contacto">
-                <h4 class="contact-header">CONTACTO</h4>
-                <ul class="footer-list">
-                    <li><i class="fas fa-phone-alt"> </i> 4855 7679</li>
-                    <li><i class="fab fa-whatsapp"> </i> +54 115896 3652</li>
-                    <li><i class="far fa-envelope"> </i> info@casamalewo.com</li>
-                </ul>
-            </div>
-        </section>
-        <section>
-            <p>todos los derechos reservados MALEWO® 2021</p>
-        </section>
-    </footer>
-    
+<%- include('./partials/footer') %> 
     <script src="../js/prueba.js"></script>
 </body>
 
