arregle la ruta a product detail

--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -3,8 +3,8 @@
     <main>
         <section class="main-section">
             <article class="support-img">
-                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
-                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
+                <img src="img\interior\maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
+                <img src="img\interior\maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
             </article>
             <article class="main-img-article">
                 <img src="img/interior/maseta-para-interior-redondas.jpg" alt="main-img" class="main-img">
