arregle problema con imagenes en product detail, arregle problema con el hover en articles y agregue las paginas de crear y editar producto

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -304,7 +304,7 @@ article img{
 article p{
     transition: box-shadow 450ms;
 }
-article:hover img{
+.article-hover:hover img{
     box-shadow: 0px 0px 10px rgb(100 100 100);
 }
 article:hover p{
