--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,19 +13,19 @@
     <main>
         <section class="productos-disponibles">
             <!-- <article class="a1"> -->
-            <article>
+            <article class="article-hover">
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1">
 
 
 
                 <p class="p1">INTERIOR</p>
             </article>
-            <article>
+            <article class="article-hover">
                 <!-- <article class="a2"> -->
                 <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
                 <p class="p2">EXTERIOR</p>
             </article>
-            <article>
+            <article class="article-hover">
                 <!-- <article class="a3"> -->
                 <img src="img\accesorios\Screenshot_15.png" alt="">
                 <p class="p3">ACCESORIOS</p>
@@ -38,15 +38,15 @@
         <section class="destacados">
             <!-- <h2>DESTACADOS </h2> -->
 
-            <article>
+            <article class="article-hover">
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1">
                 <p>INTERIOR</p>
             </article>
-            <article>
+            <article class="article-hover">
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1">
                 <p>INTERIOR</p>
             </article>
-            <article>
+            <article class="article-hover">
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1">
                 <p>INTERIOR</p>
             </article>
