--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
                 <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
             </div>
             <a class="logo-img" href="/" style="text-decoration: none;">
-                <img src="img\logo.jpg" alt="logo">
+                <img src="/img/logo.jpg" alt="logo">
             </a>
             <a href="/" style="text-decoration: none;">
                 <h1>CASA MALEWO</h1>
