--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -3,11 +3,11 @@
     <main>
         <section class="main-section">
             <article class="support-img">
-                <img src="img\interior\maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
-                <img src="img\interior\maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
+                <img src="/img/interior/maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
+                <img src="/img/interior/maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
             </article>
             <article class="main-img-article">
-                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="main-img" class="main-img">
+                <img src="/img/interior/maseta-para-interior-redondas.jpg" alt="main-img" class="main-img">
             </article>
             <article class="info-buy-article">
                 <div>
@@ -39,14 +39,14 @@
                 <h3 class="offers">Destacados / Ofertas</h3>
             </div>
             <div class="img-offer">
-                <img src="img/interior/Screenshot_1.png" alt="img-alt" class="img">
-                <img src="img/interior/Screenshot_9.png" alt="img-alt" class="img">
-                <img src="img/interior/Screenshot_10.png" alt="img-alt" class="img">
-                <img src="img/interior/Screenshot_17.png" alt="img-alt" class="img">
+                <img src="/img/interior/Screenshot_1.png" alt="img-alt" class="img">
+                <img src="/img/interior/Screenshot_9.png" alt="img-alt" class="img">
+                <img src="/img/interior/Screenshot_10.png" alt="img-alt" class="img">
+                <img src="/img/interior/Screenshot_17.png" alt="img-alt" class="img">
             </div>
         </section>
     </main>
 <%- include('./partials/footer') %> 
-    <script src="../js/prueba.js"></script>
+    <script src="/js/prueba.js"></script>
 </body>
 </html>
