--- a/views/products.ejs
+++ b/views/products.ejs
@@ -46,39 +46,39 @@
 
             </div>
             <div class="lista-de-productos">
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\1.jpg" alt="maceta1">
                     <p>MACETA 1</p>
                 </article>
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\2.png" alt="maceta1">
                     <p>MACETA 2</p>
                 </article>
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\3.jpg" alt="maceta1">
                     <p>MACETA 3</p>
                 </article>
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\4.png" alt="maceta1">
                     <p>MACETA 4</p>
                 </article>
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\5.jpg" alt="maceta1">
                     <p>MACETA 5</p>
                 </article>
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\6.jpg" alt="maceta1">
                     <p>MACETA 6</p>
                 </article>
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\7.jpg" alt="maceta1">
                     <p>MACETA 7</p>
                 </article>
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\8.jpg" alt="maceta1">
                     <p>MACETA 8</p>
                 </article>
-                <article>
+                <article class="article-hover">
                     <img src="img\productos\9.jpg" alt="maceta1">
                     <p>MACETA 9</p>
                 </article>
