--- a/public/css/styles-products.css
+++ b/public/css/styles-products.css
@@ -61,10 +61,7 @@ a:hover{
     margin-right:-100%;
     border-bottom:1px solid rgb(189, 189, 189);
 }
-.lista-filtros{
-    display: none;  
-    
-}
+
 .lista-filtros ul li{
     display: flex;
     justify-content: space-between;
@@ -113,6 +110,25 @@ a:hover{
     width: 100%;
 }
 
+@media (max-width: 542px){
+    .lista-filtros{
+       position: absolute;
+       z-index: 1;
+       background-color: black;
+       opacity: 0.7;
+       width: 100%;
+       height: 92vh;
+       transform: translateX(100%);
+    
+       
+    }
+    .lista-filtros ul li i{
+        color: white;
+    }
+    .lista-filtros ul li a{
+        color: white;
+    }
+}
 
 
 @media(min-width: 542px){
@@ -127,7 +143,9 @@ a:hover{
         display: none;
     }
     .lista-filtros{
-        display: block
+        display: block;
+        position: relative;
+        
     }
     .catalogo{
         justify-content: space-between;
