--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -142,10 +142,9 @@ header ul{
     opacity: 0.7;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin-top: 17px;
-    width: 231px;
-    margin-left: -25px;
+    width: 100%;
     padding: 14px;
 }
 body{
@@ -154,8 +153,7 @@ body{
 
 div.barra ul li a{
     font-size: 1rem;
-    margin-left: 30px;
-    margin-top: 0px;
+    margin-top: 20px;
     font-weight: 100;
     color: #FFFFFF;
     text-decoration: none;
@@ -373,6 +371,7 @@ footer section p {
 
 
 @media (max-width:542px){
+    
     .nav-ul{
         transform: translateX(-100%);
         transition: transform .5s ease-in;
