--- a/public/css/styles-products.css
+++ b/public/css/styles-products.css
@@ -49,6 +49,7 @@ a:hover{
     margin-left: 8px ;
     width: 20px;
     padding-top: 1px;
+    cursor: pointer;
     
 }
 .title-line-grey{
@@ -109,6 +110,9 @@ a:hover{
 .lista-de-productos img {
     width: 100%;
 }
+.lista-filtros.active{
+    transform: translateX(0%);
+}
 
 @media (max-width: 542px){
     .lista-filtros{
@@ -119,9 +123,11 @@ a:hover{
        width: 100%;
        height: 92vh;
        transform: translateX(100%);
+       transition: transform 0.5s ease-in;
     
        
     }
+
     .lista-filtros ul li i{
         color: white;
     }
@@ -129,6 +135,7 @@ a:hover{
         color: white;
     }
 }
+
 
 
 @media(min-width: 542px){
