--- a/views/modify-product.ejs
+++ b/views/modify-product.ejs
@@ -5,19 +5,17 @@
             <h2>Modificar Producto</h2>
         </section>
         <section class="form-section">
-            <form>
+            <form action="/products/" method="POST" enctype="multipart/form-data">
                 <label for="name">Nombre del producto</label>
-                <input type="text" name="ProductName" id="name">
+                <input type="text" name="Nombre" id="name">
                 <label for="description">Descripción</label>
-                <input type="text" name="ProductDesc" id="description">
+                <input type="text" name="Descripcion" id="description">
                 <label for="img">Imagenes</label>
-                <input type="file" name="ProductImg" id="img" accept=".jpg, .png, .jpeg, .tif, .tiff" multiple class="file-input">
+                <input type="file" name="Image" id="img" accept=".jpg, .png, .jpeg, .tif, .tiff" multiple class="file-input">
                 <label for="category">Categoría</label>
-                <input type="text" name="ProductCat" id="category">
-                <label for="color">Colores</label>
-                <input type="text" name="ProductColor" id="color">
+                <input type="text" name="Category" id="category">
                 <label for="price">Precio</label>
-                <input type="text" name="ProductPrice" id="price">
+                <input type="text" name="Precio" id="price">
                 <button type="submit">modificar</button>
             </form>
         </section>
