--- a/views/new-product.ejs
+++ b/views/new-product.ejs
@@ -6,16 +6,16 @@
         </section>
         <section class="form-section">
             <form action="/products" method="POST" enctype="multipart/form-data">
-                <label for="name">Nombre del producto</label>
-                <input type="text" name="Nombre" id="name">
-                <label for="description">Descripción</label>
-                <input type="text" name="Descripcion" id="description">
-                <label for="img">Imagenes</label>
-                <input type="file" name="Image" id="img" accept=".jpg, .png, .jpeg, .tif, .tiff" multiple class="file-input">
-                <label for="category">Categoría</label>
-                <input type="text" name="Category" id="category">
-                <label for="price">Precio</label>
-                <input type="text" name="Precio" id="price">
+                <label for="Nombre">Nombre del producto</label>
+                <input type="text" name="Nombre" id="Nombre">
+                <label for="Descripcion">Descripción</label>
+                <input type="text" name="Descripcion" id="Descripcion">
+                <label for="Image">Imagenes</label>
+                <input type="file" name="Image" id="Image" accept=".jpg, .png, .jpeg, .tif, .tiff" multiple class="file-input">
+                <label for="Category">Categoría</label>
+                <input type="text" name="Category" id="Category">
+                <label for="Precio">Precio</label>
+                <input type="text" name="Precio" id="Precio">
                 <button type="submit">Crear</button>
             </form>
         </section>
