--- a/views/modify-product.ejs
+++ b/views/modify-product.ejs
@@ -5,7 +5,7 @@
             <h2>Modificar Producto</h2>
         </section>
         <section class="form-section">
-            <form action="/products/" method="POST" enctype="multipart/form-data">
+            <form action="/products/?_method=PUT" method="POST" enctype="multipart/form-data">
                 <label for="name">Nombre del producto</label>
                 <input type="text" name="Nombre" id="name">
                 <label for="description">Descripción</label>
