--- a/public/css/styles-register.css
+++ b/public/css/styles-register.css
@@ -56,6 +56,14 @@ button {
     border: none;
 }
 
+.error-msg {
+    color: red;
+}
+
+.error-border {
+    border: solid 1px red;
+}
+
 @media(min-width: 542px){
     .logo-img{
         display:block
