--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,15 +8,27 @@
         <section class="form-section">
             <form action="/register/" method="POST" enctype="multipart/form-data" class="form">
                 <label for="name">Nobre de Usuario</label>
-                <input type="text" id="name" name="user-name">
+                <input class= '<%= locals.errors && errors.name ? "error-border": ""%>' type="text" id="name" name="name" value="<%= locals.old && old.name %>">
+                <% if (locals.errors && errors.name) { %>
+                    <p class="error-msg"><%= errors.name.msg%></p>
+                <% } %>
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email">
+                <input class= '<%= locals.errors && errors.email ? "error-border": ""%>' type="email" id="email" name="email" value="<%= locals.old && old.email %>">
+                <% if (locals.errors && errors.email) { %>
+                    <p class="error-msg"><%= errors.email.msg%></p>
+                <% } %>
                 <label for="Image">Imagen de Perfil</label>
                 <input type="file" name="Image" id="Image" accept=".jpg, .png, .jpeg, .tif, .tiff" class="file-input">
                 <label for="tel">Número de Teléfono</label>
-                <input type="tel" id="tel" name="num-tel">
+                <input class= '<%= locals.errors && errors.tel ? "error-border": ""%>' type="tel" id="tel" name="tel" value="<%= locals.old && old.tel %>">
+                <% if (locals.errors && errors.tel) { %>
+                    <p class="error-msg"><%= errors.tel.msg%></p>
+                <% } %>
                 <label for="password">Contraseña</label>
-                <input type="password" id="password" name="user-password">
+                <input class= '<%= locals.errors && errors.password ? "error-border": ""%>' type="password" id="password" name="password" value="<%= locals.old && old.password %>">
+                <% if (locals.errors && errors.password) { %>
+                    <p class="error-msg"><%= errors.password.msg%></p>
+                <% } %>
                 <button type="submit">Crear Cuenta</button>
             </form>
         </section>
