--- a/views/modify-product.ejs
+++ b/views/modify-product.ejs
@@ -7,15 +7,20 @@
         <section class="form-section">
             <form action="/products/<%= wantedProduct[0].id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 <label for="name">Nombre del producto</label>
-                <input type="text" name="Nombre" id="name">
-                <label for="description">Descripción</label>
-                <input type="text" name="Descripcion" id="description">
+                <input type="text" name="Nombre" id="name" placeholder=" <%= wantedProduct[0].Nombre %>">
+                <label for="description" >Descripción</label>
+                <input type="text" name="Descripcion" id="description" placeholder=" <%= wantedProduct[0].Descripcion %>">
                 <label for="img">Imagenes</label>
                 <input type="file" name="Image" id="img" accept=".jpg, .png, .jpeg, .tif, .tiff" multiple class="file-input">
                 <label for="category">Categoría</label>
-                <input type="text" name="Category" id="category">
-                <label for="price">Precio</label>
-                <input type="text" name="Precio" id="price">
+                <select style="width: 100%;" name="category" id="category">
+
+                    <option value="interior">INTERIOR </option>
+                    <option value="exterior">EXTERIOR</option>                    
+                    
+                </select>
+                <label for="price"placeholder=" <%= wantedProduct[0].Precio %>">Precio</label>
+                <input type="text" name="Precio" id="price" placeholder=" <%= wantedProduct[0].Precio %>">
                 <button type="submit">modificar</button>
             </form>
         </section>
