--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
             <div class="style-bar1"></div>
         </section>
         <section class="form-section">
-            <form action="/login/" method="POST" enctype="multipart/form-data" class="form">
+            <form action="/login/" method="POST"  class="form">
                 <label for="email" >Email</label>
                 <input type="email" name="email" id="email">
                 <label for="password">Password</label>
