--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,17 @@
         </section>
         <section class="form-section">
             <form action="/login" method="POST" class="form">
-                <label for="email" >Email</label>
-                <input type="email" name="email" id="email">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-
+                <label for="email">Email</label>
+                <input class= '<%= locals.errors && errors.email ? "error-border": ""%>' type="email" id="email" name="email" value="<%= locals.old && old.email %>">
+                <% if (locals.errors && errors.email) { %>
+                    <p class="error-msg"><%= errors.email.msg%></p>
+                <% } %>
+               
+                <label for="password">Contraseña</label>
+                <input class= '<%= locals.errors && errors.password ? "error-border": ""%>' type="password" id="password" name="password" value="<%= locals.old && old.password %>">
+                <% if (locals.errors && errors.password) { %>
+                    <p class="error-msg"><%= errors.password.msg%></p>
+                <% } %>
                 <a href="/retrieve-Acount" >¿Has olvidado tu contraseña?</a>
                 <a href="/register" >Registrarse</a>
                 <button type="submit" >Iniciar Sesión</button>
