arregle el hover de la detalles del producto para que no actue sobre el texto.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -305,7 +305,7 @@ article p{
 .article-hover:hover img{
     box-shadow: 0px 0px 10px rgb(100 100 100);
 }
-article:hover p{
+.article-hover:hover p{
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
