barra negra del header acomodada

--- a/views/productManagment.ejs
+++ b/views/productManagment.ejs
@@ -7,7 +7,7 @@
     </section>
     <section class="products">
         <% products.forEach(prod => {%>
-            <div>
+            <div class="product-list">
                 <div class="name-buttons">
                     <%= prod.Nombre %>
                     <form action="/products/managment" method="POST">
