--- a/views/modify-product.ejs
+++ b/views/modify-product.ejs
@@ -13,7 +13,7 @@
                 <label for="img">Imagenes</label>
                 <input type="file" name="Image" id="img" accept=".jpg, .png, .jpeg, .tif, .tiff" multiple class="file-input">
                 <label for="category">Categoría</label>
-                <select style="width: 100%;" name="category" id="category">
+                <select name="category" id="category" class="select">
 
                     <option value="interior">INTERIOR </option>
                     <option value="exterior">EXTERIOR</option>                    
