--- a/public/css/styles-products.css
+++ b/public/css/styles-products.css
@@ -116,7 +116,7 @@ a:hover{
 
 @media (max-width: 542px){
     .lista-filtros{
-       position: absolute;
+       position: fixed;
        z-index: 1;
        background-color: black;
        opacity: 0.7;
@@ -126,7 +126,7 @@ a:hover{
        transition: transform 0.5s ease-in;
     
        
-    }
+    }       
 
     .lista-filtros ul li i{
         color: white;
