--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,9 +13,11 @@
                     <p class="error-msg"><%= errors.name.msg%></p>
                 <% } %>
                 <label for="email">Email</label>
-                <input class= '<%= locals.errors && errors.email ? "error-border": ""%>' type="email" id="email" name="email" value="<%= locals.old && old.email %>">
+                <input class= '<%= locals.errors && errors.email || locals.emailError ? "error-border": ""%>' type="email" id="email" name="email" value="<%= locals.old && old.email %>">
                 <% if (locals.errors && errors.email) { %>
                     <p class="error-msg"><%= errors.email.msg%></p>
+                <% }else if (locals.emailError && emailError) { %>
+                    <p class="error-msg"><%= emailError%></p>
                 <% } %>
                 <label for="Image">Imagen de Perfil</label>
                 <input type="file" name="Image" id="Image" accept=".jpg, .png, .jpeg, .tif, .tiff" class="file-input">
