--- a/public/css/styles-profile.css
+++ b/public/css/styles-profile.css
@@ -5,13 +5,46 @@ main {
     justify-content: center;
     margin-bottom: 20px;
 }
-.container {
-    align-items: center;
-}    
-.profile-photo img {
-    width: 20%;
 
+.name-picture {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.main-info {
+    margin-top: 15px;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.style-bar1 {
+    height: 1px;
+    background: black;
+    display: inline-block;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+img {
+    width: 40%;
     display: flex;
     align-items: center;
+    border-radius: 50%;
+}
 
+.button-link {
+    width: 100%;
+}
+
+button {
+    width: 25%;
+    height: 30px;
+    font-family: 'Poppins', sans-serif;
+    background-color: #000000;
+    color: #FFFFFF;
+    margin-top: 20px;
 }
