--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,10 +18,18 @@
                 <% if (locals.errors && errors.password) { %>
                     <p class="error-msg"><%= errors.password.msg%></p>
                 <% } %>
+                <div class="col-md-6 my-2">
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input type="checkbox" class="form-check-input" name="remember_user">Recordar mi usuario
+                        </label>
+                    </div>
+                </div>
                 <a href="/retrieve-Acount" >¿Has olvidado tu contraseña?</a>
                 <a href="/register" >Registrarse</a>
                 <button type="submit" >Iniciar Sesión</button>
             </form>
+            
         </section>
     </main>
 <%- include('./partials/footer') %> 
