puesta en funcionamiento de edicion y borrado de usuarios

--- a/views/loginProfile.ejs
+++ b/views/loginProfile.ejs
@@ -3,15 +3,21 @@
 <main>
         <section class="name-picture">
             <h2>Hola <%= user.name %>!</h2>
-            <img src="/img/userImg/<%= user.Image %>  ">
+            <img src="/img/userImg/<%= user.img %>  ">
         </section>
         <div class="style-bar1"></div>
         <section class="main-info">
             <h3>Email: <%= user.email %> </h3>
-            <h3>tel: <%= user.tel %></h3>
+            <h3>tel: +<%= user.phone %></h3>
             <a href="/compras" class="button-link">
                 <button><i class="fas fa-shopping-bag"></i></button>
             </a>
+            <a href="/userEdit/<%= user.id %>" class="button-link">
+                <button>Editar</button>
+            </a>
+            <form action="/deleteUser/<%= user.id %>?_method=DELETE" method="POST" enctype="multipart/form-data">
+                <button type="submit"> Eliminar Perfil</button>
+            </form>
         </section>
 </main>
 
