--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -7,43 +7,39 @@
             <h2 class="title-line">MI COMPRA </h2>
         </section>
         <section class="lista-compras">
-        <h2 class="title-line-grey"></h2>
-        <section class="compra">
-            <div class="producto">
-                <div class="product-name-icon">
-                    <div class="item-carro">
-                        <img src="img\productos\8.jpg" alt="">
-                        <p>MACETA TRAIDA DEL TIBET</p>
-                        <h4>MACETA TRAIDA DEL TIBET</h4>
-                    </div>
-                    
-
-                    <div class="titles-box">
-                        
-                        <div class="precio-cantidad">
-                            <div class="precio-unitario">
-                            <p>PRECIO UNITARIO</p>
-                            <p class="precioU" style="margin-bottom: 15px;">$1.500</p>
+       
+        <% products.forEach(product => { %>
+            <section class="compra">
+                <h2 class="title-line-grey"></h2>
+                <div class="producto">
+                    <div class="product-name-icon">
+                        <div class="item-carro">
+                            <img src="img\productos\<%= product.productFound.img %>" alt="">
+                            <h4><%= product.productFound.name %></h4>
+                        </div>
+                        <div class="titles-box">
+                            <div class="precio-cantidad">
+                                <div class="precio-unitario">
+                                <p>PRECIO UNITARIO</p>
+                                <p class="precioU" style="margin-bottom: 15px;"><%= product.productFound.Price %></p>
+                                </div>
+                                <div class="cantidad">
+                                <p>CANTIDAD</p>
+                                <i class="fas fa-minus-circle"></i>
+                                <input type="number" name="quantity[595099420]" data-item-id="595099420" value="<%= product.quantity %>"
+                                class="js-cart-quantity-input cart-item-input form-control">
+                                <i class="fas fa-plus-circle"></i>
+                                </div>
                             </div>
-                            <div class="cantidad">
-                            <p>CANTIDAD</p>
-                            <i class="fas fa-minus-circle"></i>
-                            <input type="number" name="quantity[595099420]" data-item-id="595099420" value="1"
-                            class="js-cart-quantity-input cart-item-input form-control">
-                            <i class="fas fa-plus-circle"></i>
-
                         </div>
-    
+                        <div class="cross">
+                            <i id="cross" class="fas fa-times"></i>
                         </div>
-                    </div>
-                    <div class="cross">
-                        <i id="cross" class="fas fa-times"></i>
                     </div>
                 </div>
-                
-            </div>
-            
-            <h2 class="title-line-grey"></h2>
+                <h2 class="title-line-grey"></h2>
+            </section>
+            <% }) %>
             <section class="shop-box">
                 <div class="resumen">
                     <div class="resumen-de-compras">
@@ -54,19 +50,19 @@
                         <div class="suma-productos">
                             <div class="totales">
                                 <p>subtotal</p>
-                                <p>$1.500,00</p>
+                                <p>$<%= total %></p>
                             </div>
                             <div class="totales" style="margin-bottom: 53px;">
                                 <p style="font-weight: bold;">TOTAL</p>
-                                <p>$1.500,00</p>
+                                <p>$<%= total %></p>
 
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="finalizar">
-                    <h3>FINALIZAR COMPRA </h3>
-                </div>
+                <form action="/confirmedBuy" method="POST">
+                    <button> COMPRAR </button>
+                </form>
             </section>
         </section>
         <h2 class="title-line-grey" style="position: relative;bottom: 82px;"></h2>
