--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,5 +34,6 @@
     </main>
 <%- include('./partials/footer') %> 
     <script src="../js/prueba.js"></script>
+    <script src="../js/formValidationLogin.js"></script>
 </body>
 </html>
