--- a/views/modify-product.ejs
+++ b/views/modify-product.ejs
@@ -5,7 +5,7 @@
             <h2>Modificar Producto</h2>
         </section>
         <section class="form-section">
-            <form action="/products/<%= wantedProduct.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+            <form action="/products/<%= wantedProduct.id %>?_method=PUT" method="POST" enctype="multipart/form-data" id="form">
                 <label for="name">Nombre del producto</label>
                 <input type="text" name="Nombre" id="name" value=" <%= wantedProduct.name %>">
                 <label for="description" >Descripción</label>
@@ -27,6 +27,7 @@
         </section>
     </main>
 <%- include('./partials/footer') %> 
-    <script src="../js/prueba.js"></script>
+    <script src="http://localhost:3050/js/prueba.js"></script>
+    <script src="../../../js/formValidationProduct.js"></script>
 </body>
 </html>
