--- a/views/new-product.ejs
+++ b/views/new-product.ejs
@@ -5,7 +5,7 @@
             <h2>Crear producto</h2>
         </section>
         <section class="form-section">
-            <form action="/products" method="POST" enctype="multipart/form-data">
+            <form action="/products" method="POST" enctype="multipart/form-data" id="form">
                 <label for="Nombre">Nombre del producto</label>
                 <input type="text" name="Nombre" id="Nombre">
                 <label for="Descripcion">Descripción</label>
@@ -29,5 +29,6 @@
     </main>
 <%- include('./partials/footer') %> 
     <script src="../js/prueba.js"></script>
+    <script src="../js/formValidationProduct.js"></script>
 </body>
 </html>
