--- a/views/new-product.ejs
+++ b/views/new-product.ejs
@@ -6,12 +6,12 @@
         </section>
         <section class="form-section">
             <form action="/products" method="POST" enctype="multipart/form-data" id="form">
-                <label for="Nombre">Nombre del producto</label>
-                <input type="text" name="Nombre" id="Nombre">
-                <label for="Descripcion">Descripción</label>
-                <input type="text" name="Descripcion" id="Descripcion">
-                <label for="Image">Imagenes</label>
-                <input type="file" name="Image" id="Image" accept=".jpg, .png, .jpeg, .tif, .tiff" multiple class="file-input">
+                <label for="name">Nombre del producto</label>
+                <input type="text" name="Nombre" id="name">
+                <label for="description">Descripción</label>
+                <input type="text" name="Descripcion" id="description">
+                <label for="img">Imagenes</label>
+                <input type="file" name="Image" id="img" accept=".jpg, .png, .jpeg, .tif, .tiff" multiple class="file-input">
                 <label for="category">Categoría</label>
                 <select name="category" id="category">
                         <% for (let i = 0; i < categories.length; i++) {  %> 
