implementada la categoria en product detail y terminado el banner

--- a/public/css/styles-product-detail.css
+++ b/public/css/styles-product-detail.css
@@ -71,6 +71,10 @@ main section article {
     margin-top: 5px;
 }
 
+.category {
+    font-weight: bold;
+}
+
 form {
     display: flex;
     flex-direction: row;
