--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,7 +30,7 @@ h2, h3, h4{
         width: 100%;
         padding-bottom: 20px;
         position: fixed;
-        z-index: 1;
+        z-index: 5000;
         top: 0;
         position: fixed;
 }
@@ -183,18 +183,20 @@ header li {
     padding-left: 0px;
 }
 
-.slider{
+.main-banner{
     position: relative;
-    display: flex;
-    text-align: center;
-    align-items: center;
     margin-top: 70px;
-
     
 }
-.slider img{
-    width: 100%;
+
+.main-banner .textBanner p {
+    display: none;
 }
+
+.main-banner .textBanner h2 {
+    display: none;
+}
+
 .boton-izq{
     position: relative;
     left: 2px;
@@ -202,12 +204,6 @@ header li {
 .boton-derecho {
 position: relative;
 right: 27px;
-}
-.slider i{
-    position: absolute;
-    color: wheat;
-    opacity: 85%;
-    font-size: 1.5rem;
 }
 .productos-disponibles img{
     width: 100%;
@@ -432,7 +428,7 @@ footer section p {
         
     }
     
-    .slider {
+    .main-banner {
         padding: 40px 10% 0 10%;
         margin-top: 95px;
     }
@@ -466,11 +462,69 @@ footer section p {
         margin-left: 12%;
         margin-right: 12%;
     }
-    .slider{
-        padding: 40px 15% 0 15%;
+    .main-banner{
+        margin-top: 160px;
+        width: 80%;
+        height: 400px;
+        background-color: white;
+        overflow: hidden;
+        padding: 0%;
+        margin-left: 10%;
+        position: relative;
     }
-    .slider i{
-        font-size: 3rem;
+    .main-banner .imgBanner {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0px;
+        transition: all ease-in-out 500ms;
+        -webkit-transition: all ease-in-out 500ms;
+    }
+
+    .main-banner #imgBanner3 {
+        background-image: url(../img/img-home/banner3.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .main-banner #imgBanner2 {
+        background-image: url(../img/img-home/banner2.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .main-banner #imgBanner1 {
+        background-image: url(../img/img-home/banner1.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .main-banner .textBanner h2 {
+        font-family: 'Antonio', sans-serif;
+        font-size: 60px;
+        color: #FFFFFF;
+        display: block;
+    }
+    .main-banner .textBanner p {
+        font-family: 'Antonio', sans-serif;
+        font-size: 20px;
+        color: #FFFFFF;
+        padding-top: 6px;
+        display: block;
+    }
+    .main-banner #imgBanner3 .textBanner {
+        padding-top: 220px;
+        padding-left: 100px;
+    }
+    .main-banner #imgBanner2 .textBanner {
+        padding-top: 220px;
+        margin-right: 20px;
+        float: right;
+        text-align: right;
+    }
+    .main-banner #imgBanner1 .textBanner {
+        margin-top: 200px;
+        margin-left: 20px;
     }
     .boton-derecho{
         right: 58px;
