--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,62 +1,72 @@
 <%- include('./partials/head-index') %>
-<%- include('./partials/header') %> 
-    <section class="slider">
-        <div class="boton-izq">
-            <i class="fas fa-arrow-circle-left"></i>
-        </div>
-        <img src="img\img-home\slide-1626226883766-2870749949-6cd167443e459e68f3a17842adf194e61626226913-1024-1024.jpg"
-            alt="slider">
-        <div class="boton-derecho">
-            <i class="fas fa-arrow-circle-right"></i>
-        </div>
-    </section>
-    <main>
-        <section class="productos-disponibles">
-            <!-- <article class="a1"> -->
-            <article class="article-hover">
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-
-
-
-                <p class="p1">INTERIOR</p>
-            </article>
-            <article class="article-hover">
-                <!-- <article class="a2"> -->
-                <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
-                <p class="p2">EXTERIOR</p>
-            </article>
-            <article class="article-hover">
-                <!-- <article class="a3"> -->
-                <img src="img\accesorios\Screenshot_15.png" alt="">
-                <p class="p3">ACCESORIOS</p>
-            </article>
+    <%- include('./partials/header') %>
+        <section class="main-banner" id="main-banner">
+            <div class="imgBanner" id="imgBanner3">
+                <div class="textBanner">
+                    <h2>Decoraciones de Exterior</h2>
+                    <p>Dale vida a tu hogar</p>
+                </div>
+            </div>
+            <div class="imgBanner" id="imgBanner2">
+                <div class="textBanner">
+                    <h2>Utileria</h2>
+                    <p>Animate a cuidar tu huerta</p>
+                </div>
+            </div>
+            <div class="imgBanner" id="imgBanner1">
+                <div class="textBanner">
+                    <h2>Decoraciones de Interior</h2>
+                    <p>Tu jardin con mas estilo</p>
+                </div>
+            </div>
         </section>
-        <section class="titulo">
-            <h2 class="title-line">DESTACADOS </h2>
-        </section>
+        <main>
+            <section class="productos-disponibles">
+                <!-- <article class="a1"> -->
+                <article class="article-hover">
+                    <img src="img\img-home\Screenshot_20.png" alt="maceta1">
 
-        <section class="destacados">
-            <!-- <h2>DESTACADOS </h2> -->
 
-            <article class="article-hover">
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-                <p>INTERIOR</p>
-            </article>
-            <article class="article-hover">
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-                <p>INTERIOR</p>
-            </article>
-            <article class="article-hover">
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-                <p>INTERIOR</p>
-            </article>
 
-        </section>
+                    <p class="p1">INTERIOR</p>
+                </article>
+                <article class="article-hover">
+                    <!-- <article class="a2"> -->
+                    <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
+                    <p class="p2">EXTERIOR</p>
+                </article>
+                <article class="article-hover">
+                    <!-- <article class="a3"> -->
+                    <img src="img\accesorios\Screenshot_15.png" alt="">
+                    <p class="p3">ACCESORIOS</p>
+                </article>
+            </section>
+            <section class="titulo">
+                <h2 class="title-line">DESTACADOS </h2>
+            </section>
 
-    </main>
-<%- include('./partials/footer') %> 
-    <script src="../js/prueba.js"></script>
+            <section class="destacados">
+                <!-- <h2>DESTACADOS </h2> -->
 
-</body>
+                <article class="article-hover">
+                    <img src="img\img-home\Screenshot_20.png" alt="maceta1">
+                    <p>INTERIOR</p>
+                </article>
+                <article class="article-hover">
+                    <img src="img\img-home\Screenshot_20.png" alt="maceta1">
+                    <p>INTERIOR</p>
+                </article>
+                <article class="article-hover">
+                    <img src="img\img-home\Screenshot_20.png" alt="maceta1">
+                    <p>INTERIOR</p>
+                </article>
 
-</html>
+            </section>
+
+        </main>
+        <%- include('./partials/footer') %>
+            <script src="../js/prueba.js"></script>
+            <script src="../js/bannerSliding.js"></script>
+            </body>
+
+            </html>
